# task-manager-clean

./: .coverage  README.md  interface.py  intro.txt  main.py  pyproject.toml  taches_sauvegardees.json
loupé/: test_interface.py
mypy-report/: index.html
mypy-report/html/src/taskmanager/: __init__.py.html  exemple_donnees.py.html  planificateur.py.html  tache.py.html  test_planificateur.py.html
src/taskmanager/: #c'est harr.py  exemple_donnees.py  main.py  planificateur.py  tache.py  test_planificateur.py
taskmanager/: #c'est harr.py  exemple_donnees.py  planificateur.py  planificateur_contraint.py  tache.py
tests/: main.py  test_planificateur.py  test_tache.py
