[project]
name = "task-manager-clean"
version = "0.1.0"
description = "Création d'un planificateur de taches"
readme = "README.md"
authors = [
    { name = "Ludovic COURTIN", email = "" },
    { name = "Marc AHANHANZO GLELE", email = "glele.ola@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]