[project]
name = "task-manager-clean"
version = "0.1.0"
description = "Création d'un planificateur de taches"
readme = "README.md"
authors = [
    { name = "Ludovic Courtin", email = "ludovic.courtin@etu.univ-tours.fr" },
    { name = "Marc Ahanhanzo Glele", email = "glele.ola@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
  "networkx",
  "matplotlib",
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "lxml"
]


[tool.pytest.ini_options]
pythonpath = ["."]